// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LookML Parser Comments and Mixed Content Parsing should handle views with comments and skip commented lines 1`] = `
{
  "explores": [],
  "views": [
    {
      "endChar": 1,
      "endLine": 26,
      "fields": [
        {
          "endChar": 3,
          "endLine": 7,
          "fileName": "03-view-with-comments.view.lkml",
          "lineNumber": 3,
          "name": "id",
          "startChar": 2,
          "startLine": 3,
          "type": "dimension",
          "viewName": "orders_with_comments",
        },
        {
          "endChar": 3,
          "endLine": 13,
          "fileName": "03-view-with-comments.view.lkml",
          "lineNumber": 10,
          "name": "customer_id",
          "startChar": 2,
          "startLine": 10,
          "type": "dimension",
          "viewName": "orders_with_comments",
        },
        {
          "endChar": 3,
          "endLine": 19,
          "fileName": "03-view-with-comments.view.lkml",
          "lineNumber": 16,
          "name": "order_count",
          "startChar": 2,
          "startLine": 16,
          "type": "measure",
          "viewName": "orders_with_comments",
        },
        {
          "endChar": 3,
          "endLine": 25,
          "fileName": "03-view-with-comments.view.lkml",
          "lineNumber": 22,
          "name": "total_revenue",
          "startChar": 2,
          "startLine": 22,
          "type": "measure",
          "viewName": "orders_with_comments",
        },
      ],
      "fileName": "03-view-with-comments.view.lkml",
      "lineNumber": 1,
      "name": "orders_with_comments",
      "startChar": 0,
      "startLine": 1,
    },
  ],
}
`;

exports[`LookML Parser Comprehensive Field Type Parsing should parse all different field types correctly 1`] = `
{
  "explores": [],
  "views": [
    {
      "endChar": 1,
      "endLine": 37,
      "fields": [
        {
          "endChar": 3,
          "endLine": 4,
          "fileName": "02-view-with-all-field-types.view.lkml",
          "lineNumber": 1,
          "name": "id",
          "startChar": 2,
          "startLine": 1,
          "type": "dimension",
          "viewName": "comprehensive_test",
        },
        {
          "endChar": 3,
          "endLine": 9,
          "fileName": "02-view-with-all-field-types.view.lkml",
          "lineNumber": 6,
          "name": "name",
          "startChar": 2,
          "startLine": 6,
          "type": "dimension",
          "viewName": "comprehensive_test",
        },
        {
          "endChar": 3,
          "endLine": 14,
          "fileName": "02-view-with-all-field-types.view.lkml",
          "lineNumber": 11,
          "name": "status",
          "startChar": 2,
          "startLine": 11,
          "type": "dimension",
          "viewName": "comprehensive_test",
        },
        {
          "endChar": 3,
          "endLine": 19,
          "fileName": "02-view-with-all-field-types.view.lkml",
          "lineNumber": 16,
          "name": "total_count",
          "startChar": 2,
          "startLine": 16,
          "type": "measure",
          "viewName": "comprehensive_test",
        },
        {
          "endChar": 3,
          "endLine": 24,
          "fileName": "02-view-with-all-field-types.view.lkml",
          "lineNumber": 21,
          "name": "average_amount",
          "startChar": 2,
          "startLine": 21,
          "type": "measure",
          "viewName": "comprehensive_test",
        },
        {
          "endChar": 3,
          "endLine": 28,
          "fileName": "02-view-with-all-field-types.view.lkml",
          "lineNumber": 26,
          "name": "date_filter",
          "startChar": 2,
          "startLine": 26,
          "type": "filter",
          "viewName": "comprehensive_test",
        },
        {
          "endChar": 3,
          "endLine": 36,
          "fileName": "02-view-with-all-field-types.view.lkml",
          "lineNumber": 30,
          "name": "time_period",
          "startChar": 2,
          "startLine": 30,
          "type": "parameter",
          "viewName": "comprehensive_test",
        },
      ],
      "fileName": "02-view-with-all-field-types.view.lkml",
      "lineNumber": 0,
      "name": "comprehensive_test",
      "startChar": 0,
      "startLine": 0,
    },
  ],
}
`;

exports[`LookML Parser Dimension Groups should handle dimension_group parsing 1`] = `
{
  "explores": [],
  "views": [
    {
      "endChar": 1,
      "endLine": 24,
      "fields": [
        {
          "endChar": 3,
          "endLine": 18,
          "fileName": "06-dimension-groups.view.lkml",
          "lineNumber": 15,
          "name": "event_type",
          "startChar": 2,
          "startLine": 15,
          "type": "dimension",
          "viewName": "events",
        },
        {
          "endChar": 3,
          "endLine": 23,
          "fileName": "06-dimension-groups.view.lkml",
          "lineNumber": 20,
          "name": "event_count",
          "startChar": 2,
          "startLine": 20,
          "type": "measure",
          "viewName": "events",
        },
        {
          "endChar": 3,
          "endLine": 13,
          "fileName": "06-dimension-groups.view.lkml",
          "lineNumber": 1,
          "name": "created",
          "startChar": 2,
          "startLine": 1,
          "type": "dimension_group",
          "viewName": "events",
        },
      ],
      "fileName": "06-dimension-groups.view.lkml",
      "lineNumber": 0,
      "name": "events",
      "startChar": 0,
      "startLine": 0,
    },
  ],
}
`;

exports[`LookML Parser Explore Parsing should parse explores with joins correctly 1`] = `
{
  "explores": [
    {
      "endChar": 1,
      "endLine": 10,
      "fields": [
        {
          "endChar": 3,
          "endLine": 4,
          "fileName": "05-explore-with-joins.view.lkml",
          "lineNumber": 1,
          "name": "customers",
          "startChar": 2,
          "startLine": 1,
          "type": "join",
          "viewName": "sales_analysis",
        },
        {
          "endChar": 3,
          "endLine": 9,
          "fileName": "05-explore-with-joins.view.lkml",
          "lineNumber": 6,
          "name": "products",
          "startChar": 2,
          "startLine": 6,
          "type": "join",
          "viewName": "sales_analysis",
        },
      ],
      "fileName": "05-explore-with-joins.view.lkml",
      "lineNumber": 0,
      "name": "sales_analysis",
      "startChar": 0,
      "startLine": 0,
    },
  ],
  "views": [],
}
`;

exports[`LookML Parser Malformed Content Handling should handle malformed LookML gracefully 1`] = `
{
  "explores": [],
  "views": [
    {
      "endChar": 1,
      "endLine": 15,
      "fields": [
        {
          "endChar": 3,
          "endLine": 4,
          "fileName": "04-malformed-view.view.lkml",
          "lineNumber": 1,
          "name": "missing_brace",
          "startChar": 2,
          "startLine": 1,
          "type": "dimension",
          "viewName": "malformed_test",
        },
        {
          "endChar": 3,
          "endLine": 9,
          "fileName": "04-malformed-view.view.lkml",
          "lineNumber": 6,
          "name": "normal_field",
          "startChar": 2,
          "startLine": 6,
          "type": "dimension",
          "viewName": "malformed_test",
        },
        {
          "endChar": 3,
          "endLine": 14,
          "fileName": "04-malformed-view.view.lkml",
          "lineNumber": 12,
          "name": "incomplete_measure",
          "startChar": 2,
          "startLine": 12,
          "type": "measure",
          "viewName": "malformed_test",
        },
      ],
      "fileName": "04-malformed-view.view.lkml",
      "lineNumber": 0,
      "name": "malformed_test",
      "startChar": 0,
      "startLine": 0,
    },
  ],
}
`;

exports[`LookML Parser Simple View Parsing should correctly parse a simple view with a dimension and a measure 1`] = `
{
  "explores": [],
  "views": [
    {
      "endChar": 1,
      "endLine": 10,
      "fields": [
        {
          "endChar": 3,
          "endLine": 5,
          "fileName": "01-simple-view.view.lkml",
          "lineNumber": 2,
          "name": "id",
          "startChar": 2,
          "startLine": 2,
          "type": "dimension",
          "viewName": "orders",
        },
        {
          "endChar": 3,
          "endLine": 9,
          "fileName": "01-simple-view.view.lkml",
          "lineNumber": 7,
          "name": "count",
          "startChar": 2,
          "startLine": 7,
          "type": "measure",
          "viewName": "orders",
        },
      ],
      "fileName": "01-simple-view.view.lkml",
      "lineNumber": 1,
      "name": "orders",
      "startChar": 0,
      "startLine": 1,
    },
  ],
}
`;
